--- a/Course_3_Week_2_Lesson_2.ipynb
+++ b/Course_3_Week_2_Lesson_2.ipynb
@@ -239,8 +239,12 @@
       "source": [
         "model = tf.keras.Sequential([\n",
         "    tf.keras.layers.Embedding(vocab_size, embedding_dim, input_length=max_length), #parameters num:16*10000\n",
-        "    tf.keras.layers.GlobalAveragePooling1D(), #flatten: convert matrix into array, no parameters #tf.keras.layers.Flatten()\n",
+        "    tf.keras.layers.GlobalAveragePooling1D(), #flatten: convert matrix into array, no parameters \n",
         "    tf.keras.layers.Dense(24, activation='relu'), #dense=activate(dot(input,kernel),bias), parameters num:16*24+24\n",
+        "    \"\"\"\n",
+        "    tf.keras.layers.Flatten(), #flatten: convert matrix into array, no parameters \n",
+        "    tf.keras.layers.Dense(24, activation='relu'), #parameters num:16*24*100+24\n",
+        "    \"\"\"\n",
         "    tf.keras.layers.Dense(1, activation='sigmoid') #parameters num: 24*1+1\n",
         "])\n",
         "model.compile(loss='binary_crossentropy',optimizer='adam',metrics=['accuracy'])"
